--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
   "name": "dh-todo-app",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Todo App Digital House Challenge.",
+  "author": {
+    "name": "@pascualmj Manuel Pascual"
+  },
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pascualmj/dh-todo-app.git"
+  },
+  "homepage": "https://github.com/pascualmj/dh-todo-app",
+  "keywords": [
+    "challenge",
+    "todo",
+    "todoapp",
+    "react",
+    "web",
+    "browser",
+    "javascript"
+  ],
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.1",
@@ -23,7 +42,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint ./src",
+    "lint:fix": "eslint ./src --fix",
+    "format": "prettier ./src --write",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +67,14 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2",
-    "@types/styled-components": "^5.1.15"
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.27.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.1.4",
+    "prettier": "^2.4.1"
   }
 }
