--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -71,6 +72,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.15",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^7.11.0",
